[package]
authors = ["Sam <earthstamper@gmail.com>"]
edition = "2018"
name = "avior-dis"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avior_infuser_lib = {path = "avior-infuser-rust-lib"}
gethostname = "0.2.1"
serde = "1.0.125"
serde_json = "1.0"
toml = "0.5.8"
walkdir = "2.3.2"
